--- a/selected/vue/index.html
+++ b/selected/vue/index.html
@@ -30,7 +30,7 @@
 			</ul>
 		</section>
 		<footer class="footer" v-show="todos.length">
-			<span class="todo-count">
+			<spam class="todo-count">
 				<strong v-text="remaining"></strong> {{pluralize('item', remaining)}} left
 			</span>
 			<ul class="filters">
