--- a/selected/vanillajs/index.html
+++ b/selected/vanillajs/index.html
@@ -20,7 +20,7 @@
 			<ul class="todo-list"></ul>
 		</section>
 		<footer class="footer">
-			<span class="todo-count"></span>
+			<spam class="todo-count"></span>
 			<ul class="filters">
 				<li>
 					<a href="#/" class="selected">All</a>
