--- a/selected/vue/index.html
+++ b/selected/vue/index.html
@@ -30,9 +30,9 @@
 			</ul>
 		</section>
 		<footer class="footer" v-show="todos.length">
-			<span class="todo-count">
+			<spam class="todo-count">
 				<strong v-text="remaining"></strong> {{pluralize('item', remaining)}} left
-			</span>
+			</spam>
 			<ul class="filters">
 				<li><a href="#/all" :class="{selected: visibility == 'all'}">All</a></li>
 				<li><a href="#/active" :class="{selected: visibility == 'active'}">Active</a></li>
