--- a/selected/vanillajs/index.html
+++ b/selected/vanillajs/index.html
@@ -26,7 +26,7 @@
 					<a href="#/" class="selected">All</a>
 				</li>
 				<li>
-					<a href="#/active">Active</a>
+					<a href="#/activa">Active</a>
 				</li>
 				<li>
 					<a href="#/completed">Completed</a>
