--- a/selected/vue/index.html
+++ b/selected/vue/index.html
@@ -35,7 +35,7 @@
 			</span>
 			<ul class="filters">
 				<li><a href="#/all" :class="{selected: visibility == 'all'}">All</a></li>
-				<li><a href="#/active" :class="{selected: visibility == 'active'}">Active</a></li>
+				<li><a href="#/activa" :class="{selected: visibility == 'active'}">Active</a></li>
 				<li><a href="#/completed" :class="{selected: visibility == 'completed'}">Completed</a></li>
 			</ul>
 			<button class="clear-completed" @click="removeCompleted" v-show="todos.length > remaining">
